--- a/SFSymbolsPreview/Resource/SFSymbol.Commerce.plist
+++ b/SFSymbolsPreview/Resource/SFSymbol.Commerce.plist
@@ -88,5 +88,69 @@
         <string>larisign.circle.fill</string>
         <string>bitcoinsign.circle</string>
         <string>bitcoinsign.circle.fill</string>
+        <string>dollarsign.square</string>
+        <string>dollarsign.square.fill</string>
+        <string>centsign.square</string>
+        <string>centsign.square.fill</string>
+        <string>yensign.square</string>
+        <string>yensign.square.fill</string>
+        <string>sterlingsign.square</string>
+        <string>sterlingsign.square.fill</string>
+        <string>francsign.square</string>
+        <string>francsign.square.fill</string>
+        <string>florinsign.square</string>
+        <string>florinsign.square.fill</string>
+        <string>turkishlirasign.square</string>
+        <string>turkishlirasign.square.fill</string>
+        <string>rublesign.square</string>
+        <string>rublesign.square.fill</string>
+        <string>eurosign.square</string>
+        <string>eurosign.square.fill</string>
+        <string>dongsign.square</string>
+        <string>dongsign.square.fill</string>
+        <string>indianrupeesign.square</string>
+        <string>indianrupeesign.square.fill</string>
+        <string>tengesign.square</string>
+        <string>tengesign.square.fill</string>
+        <string>pesetasign.square</string>
+        <string>pesetasign.square.fill</string>
+        <string>pesosign.square</string>
+        <string>pesosign.square.fill</string>
+        <string>kipsign.square</string>
+        <string>kipsign.square.fill</string>
+        <string>wonsign.square</string>
+        <string>wonsign.square.fill</string>
+        <string>lirasign.square</string>
+        <string>lirasign.square.fill</string>
+        <string>australsign.square</string>
+        <string>australsign.square.fill</string>
+        <string>hryvniasign.square</string>
+        <string>hryvniasign.square.fill</string>
+        <string>nairasign.square</string>
+        <string>nairasign.square.fill</string>
+        <string>guaranisign.square</string>
+        <string>guaranisign.square.fill</string>
+        <string>coloncurrencysign.square</string>
+        <string>coloncurrencysign.square.fill</string>
+        <string>cedisign.square</string>
+        <string>cedisign.square.fill</string>
+        <string>cruzeirosign.square</string>
+        <string>cruzeirosign.square.fill</string>
+        <string>tugriksign.square</string>
+        <string>tugriksign.square.fill</string>
+        <string>millsign.square</string>
+        <string>millsign.square.fill</string>
+        <string>sheqelsign.square</string>
+        <string>sheqelsign.square.fill</string>
+        <string>manatsign.square</string>
+        <string>manatsign.square.fill</string>
+        <string>rupeesign.square</string>
+        <string>rupeesign.square.fill</string>
+        <string>bahtsign.square</string>
+        <string>bahtsign.square.fill</string>
+        <string>larisign.square</string>
+        <string>larisign.square.fill</string>
+        <string>bitcoinsign.square</string>
+        <string>bitcoinsign.square.fill</string>
     </array>
 </plist>
