--- a/SFSymbolsPreview/Info.plist
+++ b/SFSymbolsPreview/Info.plist
@@ -54,5 +54,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>SFSymbols Preview needs access your Photos to save image.</string>
 </dict>
 </plist>
